<resources>
    <string name="app_name">ToDoList</string>
    <string name="to_do">To do</string>
    <string name="title">Title</string>
<string name="complete">Complete</string>
    <string name="when">When?  </string>
    <string name="textbody">Text</string>
    <string name="create">Create</string>
    <string name="last_edit_date">Last edit: </string>
    <string name="action_edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="adding_success">Note has been created successfuly</string>
    <string name="database_error">Database error!</string>
    <string name="updating_success">This note has been uptaded successfully</string>
    <string name="deleting_success">This note has been deleted successfully</string>
    <string name="special">Special</string>
    <string name="preference_file_key">com.example.andreavalenziano.todolist.LAYOUT_CONFIGURATION_KEY</string>
    <string name="action_settings">Action settings</string>
    <string name="home">Home</string>
</resources>
