<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
    android:background="@color/colorPrimaryLight"

    android:layout_marginBottom="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_star_on"
        android:id="@+id/star_icon_main"
        android:visibility="gone"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/material_typography_title"
        android:id="@+id/title_note_tv"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_info_dates"
        android:paddingBottom="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:paddingTop="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when"
            android:id="@+id/when_tv"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_edit_date"
            android:id="@+id/last_edit_tv"
            android:gravity="end"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_dates"
        android:paddingBottom="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"
        android:paddingTop="@dimen/material_component_cards_padding_from_edge_of_screen_to_card"

        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when"
            android:id="@+id/exp_date_note_tv"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_edit_date"
            android:id="@+id/last_edit_daet_note_tv"
            android:gravity="end"
            />


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textbody"
        android:id="@+id/text_body_note_tv"/>
</LinearLayout>